--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -3,7 +3,10 @@ name: Release
 on:
   push:
     branches:
-      - main # O la rama donde merges desde dev
+      - main
+
+permissions:
+  contents: write # Permite al workflow escribir contenido del repositorio (commits, tags)
 
 jobs:
   release:
@@ -11,7 +14,7 @@ jobs:
     steps:
       - uses: actions/checkout@v3
         with:
-          fetch-depth: 0 # Es importante para analizar todos los commits
+          fetch-depth: 0
 
       - name: Set up Node.js
         uses: actions/setup-node@v3
