feat(release): Instalar y configurar semantic release para que muestre el cambio de version en el package.json

--- a/.releaserc.json
+++ b/.releaserc.json
@@ -50,10 +50,12 @@
     },
     "@semantic-release/release-notes-generator",
     "@semantic-release/changelog",
+    "@semantic-release/npm",
     [
       "@semantic-release/git",
       {
         "assets": [
+          "package.json",
           "CHANGELOG.md"
         ],
         "message": "chore(release): v${nextRelease.version} [skip ci]\n\n${nextRelease.notes}"
